finish qps rebalance

--- a/docs/01.语言/01.Go/28.TCP长连接上的请求数控制.md
+++ b/docs/01.语言/01.Go/28.TCP长连接上的请求数控制.md
@@ -62,6 +62,90 @@ author:
 
 ## 三、具体实现
 
+### 1，代码示例
+
+::: details
+
+```go
+package main
+
+import (
+	"sync"
+	"time"
+
+	"github.com/labstack/echo"
+)
+
+type QpsBalance struct {
+	mu   sync.Mutex
+	data map[string]int // key: ip:port
+	num  int            // 通过配置文件来配置
+}
+
+// Update 返回 true 表示当前的 tcp 连接上的请求数超过限制，需要断开连接
+// 如果是某个 tcp 连接长时间没有后续请求了，默认 15s 之后会发送保活报文，
+func (q *QpsBalance) Update(k string) bool {
+	q.mu.Lock()
+	defer q.mu.Unlock()
+
+	num := q.data[k] + 1
+	if num >= q.num {
+		q.data[k] = 0
+		return true
+	}
+	q.data[k] = num
+	return false
+}
+
+// Reset 通过定时任务每天3点重置，避免上游多次不同的扩容ip形成脏数据
+func (q *QpsBalance) Reset() {
+	q.mu.Lock()
+	defer q.mu.Unlock()
+
+	q.data = make(map[string]int)
+}
+
+func (q *QpsBalance) Init(n int) {
+	q.mu.Lock()
+	defer q.mu.Unlock()
+
+	q.data = make(map[string]int)
+	q.num = n
+}
+
+func main() {
+	balancer := &QpsBalance{}
+	balancer.Init(200)
+	e := echo.New()
+	e.PUT("/handle", func(c echo.Context) error {
+		if balancer.Update(c.Request().RemoteAddr) {
+			c.Response().Header().Set("Connection", "close")
+		}
+		// do other
+		return nil
+	})
+
+	go func(b *QpsBalance) {
+		ticker := time.NewTicker(time.Hour)
+		for {
+			t := <-ticker.C
+			if t.Hour() == 3 {
+				b.Reset()
+			}
+		}
+	}(balancer)
+}
+```
+
+:::
+
+### 2，基本原理
+
+* 当同一个 TCP 连接上的请求数达到一定限制时，设置返回头部为 `Connection: close`，**主动关闭 TCP 连接，并重置计数器**；
+* 需要注意的是，客户端如果也是服务器，并且存在自动扩容，那么**需要定期清理计数的 map**，避免多次不同的扩容ip形成脏数据；
+* 以及某些 TCP 连接可能没有达到计数的阈值，便不再被复用了，经过一段时间后会主动断开，这些 TCP 的计数依然存在 map 中，形成了脏数据；
+* 在 TCP 连接中，**使用四元组来标记的一个唯一的 TCP 连接**，即源ip、源端口、目的ip、目的端口，现在是在服务端进行计数的，所以目的ip和目的端口都是一样的，仅仅通过源ip和源端口便可以分别出 TCP 连接；
+
 ## 四、数据验证
 
 * 通过服务记录的监控，查看上游请求过来的**平均耗时、P99 耗时、失败率**是否有明显的变化，以及**不同服务器收到的请求 QPS 是否均匀**；
