--- a/docs/01.语言/01.Go/28.TCP长连接上的请求数控制.md
+++ b/docs/01.语言/01.Go/28.TCP长连接上的请求数控制.md
@@ -40,7 +40,9 @@ author:
 * 上面信息表示，http 采用长连接，且超时时间为7200s；
 * http 协议 1.0 默认采用短连接，即每次发送完数据后会设置 `Connection: close` 表示需要主动关闭当前 TCP 连接，进行四次挥手后关闭；下次再发送数据前，又需要先进行三次握手建立 TCP 连接，才能发送数据；循环往复，**每次建立的 TCP 连接都只能发送一次数据，每次发送数据都需要进行三次握手与四次挥手，每次建立连接与断开连接会导致网络耗时变长**，如下图左；
 
+::: center
   ![短连接](https://jsd.cdn.zzko.cn/gh/erlangtui/img-bed@master/go/keep-alive1.54do7ddglco0.jpg) ![长连接](https://jsd.cdn.zzko.cn/gh/erlangtui/img-bed@master/go/keep-alive2.ifgtpbj6lqo.jpg)
+:::
 
 * http 协议 1.1 开始默认采用长连接；即每次发送完数据后会设置 `Connection: keep-alive` 表示需要复用当前 TCP 连接，**建立一次 TCP 连接后，可以发送多次的 HTTP 报文，即多次发送数据也只需要一遍三次握手与四次挥手，省去了每次建立连接与断开连接的时间**，如上图右；
 
