--- a/docs/05.更多/04.nginx.md
+++ b/docs/05.更多/04.nginx.md
@@ -11,89 +11,82 @@ author:
   link: https://github.com/erlangtui
 ---
 * nginx 配置详细介绍
-```nginx
-#user  nobody;
+
+```shell
+# 运行用户
+user  nobody;
+# 工作进程数量，一般设为与 CPU 数量相等
 worker_processes  1;
 
-#error_log  logs/error.log;
+# 全局错误日志
+error_log  logs/error.log;
 #error_log  logs/error.log  notice;
 #error_log  logs/error.log  info;
 
-#pid        logs/nginx.pid;
+# pid 文件，记录当前 nginx 的进程 id
+pid        logs/nginx.pid;
 
-
+# 工作模式
 events {
+    # 单个工作进程的最大并发连接数
     worker_connections  1024;
 }
 
-
+# 设定http服务器，利用它的反向代理功能提供负载均衡支持
 http {
+    # 设定mime类型(邮件支持类型),类型由mime.types文件定义
     include       mime.types;
+    # 设定默认的 Content-Type 
     default_type  application/octet-stream;
 
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+    # 定义日志格式
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                     '$status $body_bytes_sent "$http_referer" '
+                     '"$http_user_agent" "$http_x_forwarded_for"';
 
-    #access_log  logs/access.log  main;
+    # 设定 access log 的文件和格式
+    access_log  logs/access.log  main;
 
+    # 指定 nginx 是否调用 sendfile 函数（zero copy 方式）来输出文件，即零拷贝的方式
+    # 对于普通应用，必须设为 on，如果用来进行下载等应用磁盘IO重负载应用，可设置为 off，以平衡磁盘与网络I/O处理速度，降低系统的uptime
     sendfile        on;
     #tcp_nopush     on;
 
-    #keepalive_timeout  0;
+    # 保持长连接超时时间
     keepalive_timeout  65;
 
-    #gzip  on;
+    # 是否开启 gzip 压缩
+    gzip  on;
 
+    # http 服务器配置
     server {
+        # 监听的端口
         listen       80;
+        # 定义访问的域名
         server_name  localhost;
 
+        # 字符编码
         #charset koi8-r;
 
         #access_log  logs/host.access.log  main;
 
+        # 配置域名根路径的访问的目录和默认页面
         location / {
-            root   /Users/zhangliang/code/vuepress/release;
+            root   /Users/code/vuepress/release;
             index  index.html index.htm;
         }
 
         #error_page  404              /404.html;
 
-        # redirect server error pages to the static page /50x.html
-        #
+        # 处理错误重定向到 /50x.html
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
             root   html;
         }
-
-        # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
-        #    proxy_pass   http://127.0.0.1;
-        #}
-
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-        #location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        #}
-
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
     }
 
 
-    # another virtual host using mix of IP-, name-, and port-based configuration
-    #
+    # 另一个 http 服务器的配置
     #server {
     #    listen       8000;
     #    listen       somename:8080;
@@ -106,19 +99,23 @@ http {
     #}
 
 
-    # HTTPS server
-    #
+    # HTTPS 服务器的配置
     #server {
     #    listen       443 ssl;
     #    server_name  localhost;
 
+    #    公钥和私钥的路径文件
     #    ssl_certificate      cert.pem;
     #    ssl_certificate_key  cert.key;
 
+    #    使用名为“SSL”的共享内存区域，大小为1兆字节
     #    ssl_session_cache    shared:SSL:1m;
+    #    指定了SSL会话超时时间，意味着SSL会话信息将在客户端与服务器之间没有活动连接的情况下保留5分钟，并在超过这个时间后过期失效
     #    ssl_session_timeout  5m;
 
+    #    用于指定SSL加密时使用的密码套件，这里的配置表示只使用安全性较高的密码套件，并排除了匿名传输和MD5算法
     #    ssl_ciphers  HIGH:!aNULL:!MD5;
+    #    用于设置SSL首选项，即让服务器端的加密算法优先级更高
     #    ssl_prefer_server_ciphers  on;
 
     #    location / {
