--- a/docs/01.语言/01.Go/28.TCP长连接上的请求数控制.md
+++ b/docs/01.语言/01.Go/28.TCP长连接上的请求数控制.md
@@ -26,7 +26,7 @@ author:
   * `tcp_keepalive_probes`：保活探测报文发送次数，9次，9次之后直接关闭；
   * `tcp_keepalive_time`：保活超时时间，7200s，即该 TCP 连接空闲两小时后开始发送保活探测报文；
 * TCP 连接传输完数据后，不会立马主动关闭，会先存活一段时间，超过存活时间后，会触发保活机制发送探测报文，多次探测确认没有数据继续传输后，再进行 TCP 四次挥手，关闭 TCP 连接；
-* 在 go 语言中，建立 TCP 连接时，默认设置的 keep-alive 为 15s，详见 `go1.21 src/net/tcp/tcpsocket.go`
+* 在 go 语言中，建立 TCP 连接时，默认设置的 keep-alive 为 15s，详见 `go1.21 src/net/tcpsocket.go newTCPConn 函数`
 
 ### 2，HTTP 的 Keep-Alive
 
