--- a/docs/01.语言/01.Go/02.map.md
+++ b/docs/01.语言/01.Go/02.map.md
@@ -182,11 +182,11 @@ type mapextra struct {
 * mapextra 存储了 map 的溢出桶相关信息，如果 key 和 elem 都不包含指针并且是内联的，那么将存储桶类型标记为不包含指针，可以避免 gc 扫描此类 map；
 * 非扩容时的基本结构如下图，buckets 指向了存储桶数组的首位，overflow 指向了溢出桶数组的首位，nextOverflow 指向下一个可以使用的溢出桶地址：
 
-![hmap非扩容时的结构图](https://jsd.cdn.zzko.cn/gh/erlangtui/img-bed@master/go/hmap.5w0gchx2w1g0.jpg)
+![hmap非扩容时的结构图](https://cdn.jsdelivr.net/gh/erlangtui/img-bed@master/go/hmap.5w0gchx2w1g0.jpg)
 
 * 扩容时的基本结构如下（桶结构依然在，未画出），buckets 指向扩容时新创建的存储桶数组，oldbuckets 指向扩容前旧存储桶数组，overflow 指向扩容时新创建的溢出桶数组，nextOverflow 指向扩容前旧溢出桶数组，nextOverflow 指向下一个可以使用的溢出桶地址即新存储桶数组后的溢出桶；
 
-![hmap扩容时的结构图](https://jsd.cdn.zzko.cn/gh/erlangtui/img-bed@master/go/hmap2.3kdbqzd91yy0.jpg)
+![hmap扩容时的结构图](https://cdn.jsdelivr.net/gh/erlangtui/img-bed@master/go/hmap2.3kdbqzd91yy0.jpg)
 
 ::: details
 ```go
@@ -346,7 +346,7 @@ func evacuated(b *bmap) bool {
 * 实际存储过程中，将所有的键连续存储在一起，将所有的值连续存储在一起，能够一定程度上避免 键值/键值 存储方式的所需要的内存对齐，如下图结构；比如`map[int64]byte`，如果以 键值/键值 方式存储，每个键值对需要填充7字节以对齐内存；
 * `overflow`是溢出桶指针，指向该桶的溢出桶：
 
-![bmap](https://jsd.cdn.zzko.cn/gh/erlangtui/img-bed@master/go/bmap.oao7mk8xrv4.jpg)
+![bmap](https://cdn.jsdelivr.net/gh/erlangtui/img-bed@master/go/bmap.oao7mk8xrv4.jpg)
 
 ### 4，makemap
 ```go
@@ -1005,7 +1005,7 @@ func evacuate(t *maptype, h *hmap, oldbucket uintptr) {
   * 如下图（来源网络），扩容前 B=5，哈希值后5位为 00110，值为 6，该 key 位于旧存储桶数组的 6 号桶；翻倍扩容后，B=6，哈希值后6位为 100110，值为 38，位于新存储桶数组的 38 号桶；如果哈希值后6位为 000110，值为 6，那么会位于新存储桶的 6 号桶；所以，B=5时，在翻倍扩容后，B=6，旧存储桶数组6号桶的数据可能会迁移新新存储桶数组中的6号桶（x桶）或38号桶（y桶），取决于哈希值的倒数第6位是0还是1；
   * 在`mapaccess1`函数中，查找该哈希值对应的 elem 时，如果该哈希值位于新存储桶6号或38号桶，则先看其对应的旧存储桶数组6号桶是否已经迁移了，如果迁移完成了，则在新存储桶中找，否则直接在旧存储桶6号桶中找；
 
-![哈希值](https://jsd.cdn.zzko.cn/gh/erlangtui/img-bed@master/go/hash_val.1i6zdfbiqn34.jpg)
+![哈希值](https://cdn.jsdelivr.net/gh/erlangtui/img-bed@master/go/hash_val.1i6zdfbiqn34.jpg)
 
 * 如果是等量扩容，说明桶是桶中的数据是**稀疏存储**的，它会将旧桶 x' 及其溢出桶的数据迁移到新存储桶数组中序号相等的一个新桶 x；
 * 如果没有协程在使用旧的存储桶数组，就把该旧桶 oldbucket 清除掉，帮助gc；
