--- a/docs/01.语言/01.Go/12.sync.Pool.md
+++ b/docs/01.语言/01.Go/12.sync.Pool.md
@@ -29,7 +29,7 @@ author:
   * 每个 P 都是自己共享对象的生产者，都是其他 P 共享对象的消费者，如下图中 P0 能够从自己的 share 所指向的链表的 head 处进行读写数据，P1、P2、P3 只能从 P0 的 share 所指向的链表的 tail 处读数据；
 * 根据 GMP 模型，每个 P 上可以运行多个 G，在 G 需要去 `Pool` 中存取临时对象时，<span style="color: red;">**会将 G 与 P 绑定，并按照 P 的序号去数组中取其对应的结构体对象，这样避免了多线程之间的竞争**</span>；
 
-![sync-pool](https://jsd.cdn.zzko.cn/gh/erlangtui/img-bed@master/go/sync-pool.53s0d4fij474.png)
+![sync-pool](https://cdn.jsdelivr.net/gh/erlangtui/img-bed@master/go/sync-pool.53s0d4fij474.png)
 
 ## 三、基本用法
 ### 1，应用场景
