--- a/docs/01.语言/01.Go/27.函数选项模式.md
+++ b/docs/01.语言/01.Go/27.函数选项模式.md
@@ -49,7 +49,7 @@ int main() {
 }
 ```
 
-- `<span style="color: red;">`**go 语言没有函数重载，也不支持可选参数，所以对于某个函数，需要新增不同个数不同类型的参数时，如果直接修改的话，那么该函数以前的所有调用方都需要更改**；
+- <span style="color: red;">**go 语言没有函数重载，也不支持可选参数，所以对于某个函数，需要新增不同个数不同类型的参数时，如果直接修改的话，那么该函数以前的所有调用方都需要更改**；</span>
 - go 语言支持可变数量的参数，但是该参数的类型必须一致，可以**将自定义的函数类型作为参数类型**，每个函数参数都是一个闭包，可以读取并处理其外部不同类型的变量，并将其赋值给函数的选项，以此实现某个函数可以接收不同数量不同类型的参数，且需要扩展参数时不用更改函数签名以及调用方，这种方式能够在语言缺陷下很好的解决代码扩展性问题；
 
 ## 二、基本原理
@@ -57,7 +57,7 @@ int main() {
 * 先声明一个 `serverCfgs`结构体，用于存储函数的参数；
 * 再声明一个函数指针 Option，该函数的参数是 `serverCfgs`类型的指针，该函数的功能一般是**接收其外部的参数并校验**，存储到 `serverCfgs`类型的结构体指针中；
 * 构造需要传递参数的函数，这些函数可以接受不同类型的参数，**并返回一个 option 类型的闭包**，在该闭包中处理该参数，每次需要新增参数时，构建一个 `func withXXX(XXX any) option`函数即可，XXX 为任意类型；
-* `func newServerCfg(opts ...option) (*serverCfgs, error)`是真正需要接收参数的函数，`<span style="color: red;">`**它可以接收任意个 option 类型的函数指针，这样将本应该接收任意个不同类型参数的函数转换为接收任意个 option 类型参数的函数，即使扩展参数该函数的签名不变，不需要更改其调用方**；
+* `func newServerCfg(opts ...option) (*serverCfgs, error)`是真正需要接收参数的函数，<span style="color: red;">**它可以接收任意个 option 类型的函数指针，这样将本应该接收任意个不同类型参数的函数转换为接收任意个 option 类型参数的函数，即使扩展参数该函数的签名不变，不需要更改其调用方**</span>；
 * 只需要在该函数中依次调用 option 类型的函数，并向其传递 `serverCfgs`类型的结构体指针用于接收 withXXX 的参数；
 
 ::: details
