--- a/docs/01.语言/04.Shell/03.vim/00.vim 插件的管理与安装.md
+++ b/docs/01.语言/04.Shell/03.vim/00.vim 插件的管理与安装.md
@@ -57,7 +57,7 @@ call plug#end()
 * 通过访问 **[vimawesome](https://vimawesome.com/)**，查找自己需要安装的插件；
 * 例如安装 **lightline** 插件
 
-  ![lightline](https://jsd.cdn.zzko.cn/gh/erlangtui/img-bed@master/shell/vimawesome.1s5s9u2xu4m8.jpg)
+  ![lightline](https://cdn.jsdelivr.net/gh/erlangtui/img-bed@master/shell/vimawesome.1s5s9u2xu4m8.jpg)
   * 在搜索框查找 lightline，在左侧选择 **VimPlug** 侧边栏；
   * 复制 `Plug 'itchyny/lightline.vim'` 到 `plug#begin('~/.vim/plugged') 和 plug#end()` 中间；
   * 在 vim 命令行执行 `:source % 和 :PlugInstall` 即可；
@@ -65,29 +65,29 @@ call plug#end()
 ### 3，使用方法
 #### 1，命令
 
-| 命令 | 描述 |
-| ----------------------------------- | ---------|
-| `PlugInstall [name ...] [#threads]` | 安装插件 |
-| `PlugUpdate [name ...] [#threads]`  | 安装或更新插件 |
-| `PlugClean[!]`                      | 删除未列出的插件 |
-| `PlugUpgrade`                       | 更新 Vim-plug 本身 |
-| `PlugStatus`                        | 检查插件的状态 |
+| 命令                                | 描述                         |
+| ----------------------------------- | ---------------------------- |
+| `PlugInstall [name ...] [#threads]` | 安装插件                     |
+| `PlugUpdate [name ...] [#threads]`  | 安装或更新插件               |
+| `PlugClean[!]`                      | 删除未列出的插件             |
+| `PlugUpgrade`                       | 更新 Vim-plug 本身           |
+| `PlugStatus`                        | 检查插件的状态               |
 | `PlugDiff`                          | 检查相比上次更新与挂起的更改 |
-| `PlugSnapshot[!] [output path]`     | 生成恢复当前插件快照的脚本  |
+| `PlugSnapshot[!] [output path]`     | 生成恢复当前插件快照的脚本   |
 
 * 在命令行使用，如添加 `Plug 'itchyny/lightline.vim'` 之后，执行 `:PlugInstall` 安装该脚本；
 #### 2，选项
 
-| 选项                     | 描述                                      |
-| ----------------------- | ------------------------------------------------ |
-| `branch`/`tag`/`commit` | 指定使用该仓库的Branch/tag/commit        |
-| `rtp`                   | 包含 Vim 插件的子目录            |
-| `dir`                   | 插件的自定义目录                |
-| `as`                    | 为插件使用不同的名称               |
-| `do`                    | 更新后钩子（字符串或函数引用），即插件安装或更新后的动作           |
-| `on`                    | 按需加载：命令或映射 `<Plug>` |
-| `for`                   | 按需加载：文件类型                   |
-| `frozen`                | 除非明确指定，否则不更新 |
+| 选项                    | 描述                                                     |
+| ----------------------- | -------------------------------------------------------- |
+| `branch`/`tag`/`commit` | 指定使用该仓库的Branch/tag/commit                        |
+| `rtp`                   | 包含 Vim 插件的子目录                                    |
+| `dir`                   | 插件的自定义目录                                         |
+| `as`                    | 为插件使用不同的名称                                     |
+| `do`                    | 更新后钩子（字符串或函数引用），即插件安装或更新后的动作 |
+| `on`                    | 按需加载：命令或映射 `<Plug>`                            |
+| `for`                   | 按需加载：文件类型                                       |
+| `frozen`                | 除非明确指定，否则不更新                                 |
 
 * 举例如下：
 
