--- a/docs/02.后端技术/00.Linux/01.流量复制技术-tcpcopy.md
+++ b/docs/02.后端技术/00.Linux/01.流量复制技术-tcpcopy.md
@@ -32,7 +32,7 @@ author:
   * 利用 TCPCopy 复制或放大生产流量，验证新版本性能是否达标；
 
 ## 三、架构设计
-![架构图](https://jsd.cdn.zzko.cn/gh/erlangtui/img-bed@master/linux/tcpcopy.6s7v8j0j4fpc.jpg)
+![架构图](https://cdn.jsdelivr.net/gh/erlangtui/img-bed@master/linux/tcpcopy.6s7v8j0j4fpc.jpg)
 
 * TCPCOPY 默认使用**原始套接字输入技术**在<span style="color: red;">**网络层**</span>捕获在线数据包并进行必要的处理（包括TCP交互模拟、网络延迟控制和常见的上层交互模拟），并默认使用**原始套接字输出技术**将数据包发送到目标服务器（图中用粉红色箭头表示）；
 * TCPCopy 由两部分组成：tcpcopy 和 intercept；
@@ -58,31 +58,31 @@ author:
 <!-- 。例如，'./tcpcopy -x 8080-192.168.0.2:8080 -c 62.135.200.x'将从当前在线服务器的端口'8080'复制请求到目标服务器'192.168.0.2'的目标端口'8080'，并将客户端IP修改为net 62.135.200.0/24 之一 -->
 <!-- 。例如，'。/tcpcopy -x 80-192.168.0.2:8080 -n 3'将从当前服务器的80端口复制数据流，生成比源数据大三倍的数据流，并将这些请求发送到'192.168.0.2'上的目标端口8080 -->
 
-选项|含义
-----|----
-`-x <transfer,>` |  <span style="color: red;">**指定源服务器和目标服务器的ip和端口**</span>，`<transfer，>`的格式可以为：`sourceIP:sourcePort-targetIP:targetPort，…`，大多数情况下，sourceIP可以省略，两个'transfer'由'，'(逗号)分隔
-`-H <ip_addr>`   |  将本地主机的IP地址更改为给定的IP地址
-`-c <ip_addr,>`  |  <span style="color: red;">**发送到目标服务器时**</span>，将客户端IP地址更改为IP地址之一
-`-n <num>`       |  <span style="color: red;">**设置流量复制倍数**</span>，最大值为 1023。由于多次复制是基于修改端口号进行的，因此可能会出现端口冲突的情况，特别是在内网应用中，源ip很少，连接时间较短。因此复制倍数越小，tcpcopy将执行得更好
-`-f <num>`       |  当运行多个tcpcopy实例时，使用此参数控制端口号修改进程，减少端口冲突。对于不同的tcpcopy实例，`<num>` 的值应该不同，允许的最大值是1023
-`-m <num>`       |  <span style="color: red;">**设置tcpcopy允许使用的最大内存(以兆为单位)**</span>，防止tcpcopy占用过多内存，影响在线系统。当内存超过这个限制时，tcpcopy 将自动退出。该参数仅在内核版本为2.6.32及以上时有效。默认为1024
-`-M <num>`       |  MTU，最大传输单元，数据链路层能够传输的最大网络包大小，默认 1500)
-`-D <num>`       |  MSS，最大分段尺寸，网络包能够装下最大报文大小，默认 1460
-`-R <num>`       |  设置默认的 rtt 值
-`-U <num>`       |  设置用户会话池大小，单位为千字节，默认为 1，最大 63
-`-C <num>`       |  tcpcopy 与 intercept 之间的并发连接数，默认为 2，最大值为 11
-`-s <server,>`   |  <span style="color: red;">**intercept 服务列表**</span>，形如：ip_addr1:port1, ip_addr2:port2, ...
-`-t <num>`       |  设置会话的超时时间。在超时时间后 tcpcopy 还没收到目标服务器的返回，该会话将被丢弃。当来自目标服务器的响应较慢或应用程序协议基于上下文时，应该设置更大的值。默认值 120 seconds.
-`-k <num>`       |  设置会话保持的超时时间
-`-l <file>`      |  设置日志文件
-`-r <num>`       |  设置会话传输百分比 (integer range:1~100)
-`-p <num>`       |  设置目标服务器的监听端口，默认值 36524.
-`-P <file>`      |  设置 pid 存储的文件，仅用于 -d 选项下
-`-O`             |  仅回放全会话
-`-g`             |  慢慢回放 gradully
-`-v`             |  版本
-`-h`             |  打印帮助并退出
-`-d`             |  以守护进程的方式运行
+| 选项             | 含义                                                                                                                                                                                                                      |
+| ---------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `-x <transfer,>` | <span style="color: red;">**指定源服务器和目标服务器的ip和端口**</span>，`<transfer，>`的格式可以为：`sourceIP:sourcePort-targetIP:targetPort，…`，大多数情况下，sourceIP可以省略，两个'transfer'由'，'(逗号)分隔         |
+| `-H <ip_addr>`   | 将本地主机的IP地址更改为给定的IP地址                                                                                                                                                                                      |
+| `-c <ip_addr,>`  | <span style="color: red;">**发送到目标服务器时**</span>，将客户端IP地址更改为IP地址之一                                                                                                                                   |
+| `-n <num>`       | <span style="color: red;">**设置流量复制倍数**</span>，最大值为 1023。由于多次复制是基于修改端口号进行的，因此可能会出现端口冲突的情况，特别是在内网应用中，源ip很少，连接时间较短。因此复制倍数越小，tcpcopy将执行得更好 |
+| `-f <num>`       | 当运行多个tcpcopy实例时，使用此参数控制端口号修改进程，减少端口冲突。对于不同的tcpcopy实例，`<num>` 的值应该不同，允许的最大值是1023                                                                                      |
+| `-m <num>`       | <span style="color: red;">**设置tcpcopy允许使用的最大内存(以兆为单位)**</span>，防止tcpcopy占用过多内存，影响在线系统。当内存超过这个限制时，tcpcopy 将自动退出。该参数仅在内核版本为2.6.32及以上时有效。默认为1024       |
+| `-M <num>`       | MTU，最大传输单元，数据链路层能够传输的最大网络包大小，默认 1500)                                                                                                                                                         |
+| `-D <num>`       | MSS，最大分段尺寸，网络包能够装下最大报文大小，默认 1460                                                                                                                                                                  |
+| `-R <num>`       | 设置默认的 rtt 值                                                                                                                                                                                                         |
+| `-U <num>`       | 设置用户会话池大小，单位为千字节，默认为 1，最大 63                                                                                                                                                                       |
+| `-C <num>`       | tcpcopy 与 intercept 之间的并发连接数，默认为 2，最大值为 11                                                                                                                                                              |
+| `-s <server,>`   | <span style="color: red;">**intercept 服务列表**</span>，形如：ip_addr1:port1, ip_addr2:port2, ...                                                                                                                        |
+| `-t <num>`       | 设置会话的超时时间。在超时时间后 tcpcopy 还没收到目标服务器的返回，该会话将被丢弃。当来自目标服务器的响应较慢或应用程序协议基于上下文时，应该设置更大的值。默认值 120 seconds.                                            |
+| `-k <num>`       | 设置会话保持的超时时间                                                                                                                                                                                                    |
+| `-l <file>`      | 设置日志文件                                                                                                                                                                                                              |
+| `-r <num>`       | 设置会话传输百分比 (integer range:1~100)                                                                                                                                                                                  |
+| `-p <num>`       | 设置目标服务器的监听端口，默认值 36524.                                                                                                                                                                                   |
+| `-P <file>`      | 设置 pid 存储的文件，仅用于 -d 选项下                                                                                                                                                                                     |
+| `-O`             | 仅回放全会话                                                                                                                                                                                                              |
+| `-g`             | 慢慢回放 gradully                                                                                                                                                                                                         |
+| `-v`             | 版本                                                                                                                                                                                                                      |
+| `-h`             | 打印帮助并退出                                                                                                                                                                                                            |
+| `-d`             | 以守护进程的方式运行                                                                                                                                                                                                      |
 
 ### 3，辅助机器上安装 intercept
 ```bash
@@ -96,19 +96,19 @@ author:
 ```
 
 ### 4，intercept 常用选项
-选项|含义
-----|----
-`-i <device,>`   |  <span style="color: red;">**要侦听的网卡接口名称**</span>，通常是驱动程序名称后面跟着一个单元号，例如，第一个以太网接口为eth0
-`-F <filter>`    |  <span style="color: red;">**过滤规则**</span>(和 pcap 规则一样)
-`-n <num>`       |  设置最大合并包的数量
-`-p <num>`       |  设置监听的 TCP 端口号，默认 36524
-`-s <num>`       |  为 intercept 设置哈希表的尺寸，默认 65536
-`-l <file>`      |  设置日志文件
-`-P <file>`      |  设置 pid 存储的文件，仅用于 -d 选项下
-`-b <ip_addr>`   |  监听接口 (默认 INADDR_ANY, 所有地址)
-`-v`             |  版本
-`-h`             |  打印帮助并退出
-`-d`             |  以守护进程的方式运行
+| 选项           | 含义                                                                                                                          |
+| -------------- | ----------------------------------------------------------------------------------------------------------------------------- |
+| `-i <device,>` | <span style="color: red;">**要侦听的网卡接口名称**</span>，通常是驱动程序名称后面跟着一个单元号，例如，第一个以太网接口为eth0 |
+| `-F <filter>`  | <span style="color: red;">**过滤规则**</span>(和 pcap 规则一样)                                                               |
+| `-n <num>`     | 设置最大合并包的数量                                                                                                          |
+| `-p <num>`     | 设置监听的 TCP 端口号，默认 36524                                                                                             |
+| `-s <num>`     | 为 intercept 设置哈希表的尺寸，默认 65536                                                                                     |
+| `-l <file>`    | 设置日志文件                                                                                                                  |
+| `-P <file>`    | 设置 pid 存储的文件，仅用于 -d 选项下                                                                                         |
+| `-b <ip_addr>` | 监听接口 (默认 INADDR_ANY, 所有地址)                                                                                          |
+| `-v`           | 版本                                                                                                                          |
+| `-h`           | 打印帮助并退出                                                                                                                |
+| `-d`           | 以守护进程的方式运行                                                                                                          |
 
 ## 五、快速入门
 * 假设 “61.135.233.160” 为目标服务器的 IP 地址；
