--- a/docs/01.语言/01.Go/14.chan.md
+++ b/docs/01.语言/01.Go/14.chan.md
@@ -414,7 +414,7 @@ const (
 
 - hchan 是 chan 的结构体类型，其底层是一个数组，包含数组的地址、长度、数组中元素的个数、元素的大小、元素的类型，以及生产队列、消费队列及其对应的索引，其基本结构图如下所示；
 - hchanSize 表示了 hchan 结构体所占内存字节数，进行了**字节对齐**，对齐单位为 maxAlign；
-![chan基本结构图](https://jsd.cdn.zzko.cn/gh/erlangtui/img-bed@master/go/erlangtui.topimage.239xy9vnbfts.jpg)
+![chan基本结构图](https://cdn.jsdelivr.net/gh/erlangtui/img-bed@master/go/erlangtui.topimage.239xy9vnbfts.jpg)
 ### 2，waitq
 
 ::: details
@@ -1150,7 +1150,7 @@ func chanparkcommit(gp *g, chanLock unsafe.Pointer) bool {
 - empty 判断 chan 是否为空，如果没有缓冲区，则查看是否存在生产者；如果有缓冲区，则判断元素数量是否为 0；
 - chanparkcommit 用于实现 goroutine 在 chan 上的阻塞和唤醒机制；
 
-![chan 场景总结](https://jsd.cdn.zzko.cn/gh/erlangtui/img-bed@master/go/image.1sw9ssisznts.jpg)
+![chan 场景总结](https://cdn.jsdelivr.net/gh/erlangtui/img-bed@master/go/image.1sw9ssisznts.jpg)
 
 > **参考文章**<br> 
 > [1] [深度解密 Go 语言之 channel](https://www.cnblogs.com/qcrao-2018/p/11220651.html#channel-%E5%BA%94%E7%94%A8)<br> 
