--- a/docs/01.语言/01.Go/28.TCP长连接上的请求数控制.md
+++ b/docs/01.语言/01.Go/28.TCP长连接上的请求数控制.md
@@ -41,7 +41,7 @@ author:
 * http 协议 1.0 默认采用短连接，即每次发送完数据后会设置 `Connection: close` 表示需要主动关闭当前 TCP 连接，进行四次挥手后关闭；下次再发送数据前，又需要先进行三次握手建立 TCP 连接，才能发送数据；循环往复，**每次建立的 TCP 连接都只能发送一次数据，每次发送数据都需要进行三次握手与四次挥手，每次建立连接与断开连接会导致网络耗时变长**，如下图左；
 
 ::: center
-  ![短连接](https://jsd.cdn.zzko.cn/gh/erlangtui/img-bed@master/go/keep-alive1.54do7ddglco0.jpg) ![长连接](https://jsd.cdn.zzko.cn/gh/erlangtui/img-bed@master/go/keep-alive2.ifgtpbj6lqo.jpg)
+  ![短连接](https://cdn.jsdelivr.net/gh/erlangtui/img-bed@master/go/keep-alive1.54do7ddglco0.jpg) ![长连接](https://cdn.jsdelivr.net/gh/erlangtui/img-bed@master/go/keep-alive2.ifgtpbj6lqo.jpg)
 :::
 
 * http 协议 1.1 开始默认采用长连接；即每次发送完数据后会设置 `Connection: keep-alive` 表示需要复用当前 TCP 连接，**建立一次 TCP 连接后，可以发送多次的 HTTP 报文，即多次发送数据也只需要一遍三次握手与四次挥手，省去了每次建立连接与断开连接的时间**，如上图右；
@@ -63,7 +63,7 @@ author:
 * **该值设置得过小，会导致经常需要 TCP 三次握手和四次挥手，无法有效发挥长连接的性能；该值设置得过大，会无法发挥该值的作用，导致长连接上的请求过多；具体的大小，要根据实际请求的 QPS 和响应耗时来设置；**
 * 七层负载均衡能够根据应用层的请求内容实现更惊喜的请求分发和处理，但是需要建立两次 TCP 连接，以及每次将报文逐步解析到应用层再又逐步封装链路层，会导致耗时和失败率上涨；
 * 四层负载均衡与七层负载均衡的比较如下：
-  ![四层与七层负载均衡的比较](https://jsd.cdn.zzko.cn/gh/erlangtui/img-bed@master/go/image.16wbqxysb4yk.jpg)
+  ![四层与七层负载均衡的比较](https://cdn.jsdelivr.net/gh/erlangtui/img-bed@master/go/image.16wbqxysb4yk.jpg)
 
 ## 三、具体实现
 
