--- a/docs/02.后端技术/01.MySql/00.MySql的基本介绍.md
+++ b/docs/02.后端技术/01.MySql/00.MySql的基本介绍.md
@@ -104,3 +104,85 @@ like_or_where: {
 
 ```
 :::
+
+### 2，json 相关
+- 在MySQL中，处理JSON数据的功能是从MySQL 5.7.8版本开始引入的，以下是一些常用的MySQL JSON相关命令和函数：
+
+#### JSON 数据类型
+- 从MySQL 5.7.8开始，MySQL引入了对JSON数据类型的支持；
+
+- **定义JSON列**
+
+  ```sql
+  CREATE TABLE mytable (
+      id INT PRIMARY KEY,
+      data JSON
+  );
+
+  -- 这样就可以在`data`列中存储JSON格式的数据
+  ```
+
+#### JSON 函数和操作
+- **JSON_EXTRACT(json_doc, path)**：从JSON字符串中提取数据。
+
+  ```sql
+  SELECT JSON_EXTRACT('{"id": 1, "name": "John"}', '$.name');
+  ```
+
+- **JSON_UNQUOTE(json_val)**：去除JSON字符串的引号。
+
+  ```sql
+  SELECT JSON_UNQUOTE('"John"');
+  ```
+
+- **JSON_SEARCH(json_doc, one_or_all, search_str[, escape_char])**：在JSON字符串中搜索指定的字符串。
+
+  ```sql
+  SELECT JSON_SEARCH('{"id": 1, "name": "John"}', 'one', 'John');
+  ```
+
+- **JSON_INSERT(json_doc, path, val[, path, val]...)**：向JSON字符串插入数据。
+
+  ```sql
+  SELECT JSON_INSERT('{"id": 1}', '$.name', 'John');
+  ```
+
+- **JSON_REPLACE(json_doc, path, val[, path, val]...)**：替换JSON字符串中的数据。
+
+  ```sql
+  SELECT JSON_REPLACE('{"id": 1, "name": "Jane"}', '$.name', 'John');
+  ```
+
+- **JSON_SET(json_doc, path, val[, path, val]...)**：设置JSON字符串中的数据。
+
+  ```sql
+  SELECT JSON_SET('{"id": 1}', '$.name', 'John');
+  ```
+
+- **JSON_CONTAINS(json_doc, val[, path])**：检查JSON字符串是否包含指定的值。
+
+  ```sql
+  SELECT JSON_CONTAINS('["apple", "banana", "cherry"]', '"banana"');
+  ```
+
+#### 简单示例
+
+```sql
+-- 创建表格存储JSON数据
+CREATE TABLE users (
+    id INT PRIMARY KEY,
+    info JSON
+);
+
+-- 插入JSON数据
+INSERT INTO users VALUES (1, '{"name": "John", "age": 30}');
+
+-- 查询JSON数据
+SELECT id, info->'$.name' AS name, info->'$.age' AS age FROM users;
+
+-- 更新JSON数据
+UPDATE users SET info = JSON_SET(info, '$.age', 31) WHERE id = 1;
+
+-- 查询包含特定值的记录
+SELECT * FROM users WHERE JSON_CONTAINS(info, '"John"');
+```
