--- a/docs/01.语言/01.Go/01.slice.md
+++ b/docs/01.语言/01.Go/01.slice.md
@@ -312,7 +312,7 @@ func growslice(et *_type, old slice, cap int) slice {
 * <span style="color: red;">**直接通过 copy 的方式是深度复制，切片底层是两个不同的数组，后续执行的赋值、追加等操作都互不影响**</span>；
 * 通过变量名赋值的方式的方式创建新的切片是浅层复制，<span style="color: red;">**新切片共享原切片的全部底层数组**</span>，索引赋值、追加操作都可能相互影响，除非某一个切片发生扩容，使用了一个新的底层数组；
 * 通过对原切片进行截取的方式创建新的切片也是浅层复制，<span style="color: red;">**新切片共享原切片的部分底层数组**</span>，索引赋值、追加操作都可能相互影响，除非某一个切片发生扩容，使用了一个新的底层数组；
-* 通过对元切片进行姐却的方式创建新的切片，同时也<span style="color: red;">**保留了原切片的容量，容易造成切片的内存泄漏**</span>；
+* 通过对原切片进行截取的方式创建新的切片，同时也<span style="color: red;">**保留了原切片的容量，容易造成切片的内存泄漏**</span>；
 
 ### 1，copy 无效
 * copy 函数是 go 的一个内置函数，用于将元素从源切片复制到目标切片，复制到目标切片的元素个数<span style="color: red;">**取决于两个切片的长度最小值**</span>；
