--- a/docs/02.后端技术/02.Redis/12.持久化.md
+++ b/docs/02.后端技术/02.Redis/12.持久化.md
@@ -17,7 +17,7 @@ author:
 * Redis 部署常常是主从模式的，主从之间的全量复制、节点崩溃后的恢复等都需要从持久化的文件中获取数据；
 * Redis 主要的持久化方式是 RDB 和 AOF，即内存快照和命令追加；
 
-## 二、、RDB 方式
+## 二、RDB 方式
 * <span style="color: red;">将当前内存中数据生成快照保存在硬盘上，可以手动触发和自动触发</span>；
 * <span style="color: red;">Redis 默认采用LZF算法对生成的 RDB 文件做压缩处理，压缩后的文件远远小于内存大小</span>，默认开启，可以通过参数 `config set rdbcompression{yes|no}` 动态修改；
 
@@ -57,7 +57,7 @@ author:
 ### 重写过程
 
 :::center
-![Redis aof rewrite](https://www.jsdelivr.ren/gh/erlangtui/img-bed@master/redis/redis.aof_rewrite.6thjws13pxw.jpg)
+![Redis aof rewrite](https://cdn.jsdelivr.net/gh/erlangtui/img-bed@master/redis/redis.aof_rewrite.6thjws13pxw.jpg)
 :::
 
 * 1）执行 AOF 重写请求；
