--- a/docs/02.后端技术/03.Docker/00.Docker的基本介绍.md
+++ b/docs/02.后端技术/03.Docker/00.Docker的基本介绍.md
@@ -23,7 +23,7 @@ docker image ls [-a] [镜像名]
 # 删除 image 文件
 docker image rm [imageName]
 
-# 从仓库抓取镜像，docker.io/library 是官方默认仓库地址和用户名可以省略，版本省略时默认是 latest
+# 从仓库抓取镜像，docker.io/library 是官方默认仓库地址和用户名可以省略，版本省略时默认是 latest，[选项] [Docker Registry 地址[:端口号]/]仓库名[:标签]
 docker image pull docker.io/library/hello-world:v1.0.0
 
 # 上传镜像仓库
