--- a/docs/05.更多/01.网站收藏/02.go 学习网址.md
+++ b/docs/05.更多/01.网站收藏/02.go 学习网址.md
@@ -2,9 +2,10 @@
 title: go-all
 date: 2024-07-23 16:55:51
 permalink: /pages/31a63d/
-sidebar: auto
+# sidebar: auto
 categories:
-  - 随笔
+  - 更多
+  - 网站收藏
 tags:
   - 
 author: 
