--- a/docs/02.后端技术/01.MySql/12.MySQL Buffer Pool 简述.md
+++ b/docs/02.后端技术/01.MySql/12.MySQL Buffer Pool 简述.md
@@ -18,3 +18,5 @@ MySQL的数据是以 16KB 大小页为单位存储在磁盘上的，如果没有
 
 Buffer Pool 是MySQL的缓存池，即在内存中开辟出一块空间，用于缓存从磁盘加载到内存中和将要从内存写入磁盘中的数据，能够有效地降低每次读写数据直接与磁盘进行交互的次数。可以在服务启动时，配置`innodb_buffer_pool_size`参数来设定缓存池的大小。
 
+## 基本构成
+控制块与缓存页、free 链表、flush 链表、哈希表、LRU 链表、脏页刷盘、实例、配置
