--- a/docs/02.后端技术/01.MySql/12.MySQL Buffer Pool 简述.md
+++ b/docs/02.后端技术/01.MySql/12.MySQL Buffer Pool 简述.md
@@ -20,3 +20,19 @@ Buffer Pool 是MySQL的缓存池，即在内存中开辟出一块空间，用于
 
 ## 基本构成
 控制块与缓存页、free 链表、flush 链表、哈希表、LRU 链表、脏页刷盘、实例、配置
+
+
+## 二、Buffer Pool
+### 1，作用
+* 当读取数据时，如果数据存在于 Buffer Pool 中，客户端就会直接读取 Buffer Pool 中的数据，否则再去磁盘中读取；
+* 当修改数据时，如果数据存在于 Buffer Pool 中，那直接修改 Buffer Pool 中数据所在的页，然后将其页设置为脏页，为了减少磁盘I/O，不会立即将脏页写入磁盘，后续由后台线程选择一个合适的时机将脏页写入到磁盘；
+### 2，内存划分
+* InnoDB 会把存储的数据划分为若干个「页」，以页作为磁盘和内存交互的基本单位，一个页的默认大小为 16KB。因此，Buffer Pool 同样需要按「页」来划分。
+* InnoDB 会在 MySQL 启动的时候**为 Buffer Pool 申请一片连续的内存空间**，然后按照默认的16KB的大小划分出一个个的页， Buffer Pool 中的页就叫做缓存页。此时这些缓存页都是空闲的，之后随着程序的运行，才会有磁盘上的页被缓存到 Buffer Pool 中。
+### 3，持久化
+* 为了防止断电导致数据丢失的问题，当有一条记录需要更新的时候，InnoDB 引擎就会先更新内存（同时标记为脏页），然后将本次对这个页的修改以 redo log 的形式记录下来，这个时候更新就算完成了；
+* InnoDB 引擎会在适当的时候，由后台线程将缓存在 Buffer Pool 的脏页刷新到磁盘里；
+* Buffer Pool 除了缓存**「索引页」和「数据页」，还包括了 Undo 页，插入缓存、自适应哈希索引、锁信息**等等。
+* undo log 和数据页的刷盘策略是一样的，都需要通过 redo log 保证持久化。
+* buffer pool 中有 undo 页，对 undo 页的修改也都会记录到 redo log。
+* redo log 会每秒刷盘，提交事务时也会刷盘，数据页和 undo 页都是靠这个机制保证持久化的。
