--- a/docs/02.后端技术/04.Kafka/00.Kafka的基本介绍.md
+++ b/docs/02.后端技术/04.Kafka/00.Kafka的基本介绍.md
@@ -12,21 +12,10 @@ author:
   name: erlangtui
   link: https://github.com/erlangtui
 ---
-<!-- Kafka史上最详细原理总结分为上下两部分，承上启下
---------------------------
-
-[Kafka史上最详细原理总结上](https://www.jianshu.com/p/734cf729d77b)
-=========================================================
-
-[Kafka史上最详细原理总结下](https://www.jianshu.com/p/acf010e67a19)
-=========================================================
-
-Kafka
------
 
 Kafka是最初由Linkedin公司开发，是一个分布式、支持分区的（partition）、多副本的（replica），基于zookeeper协调的分布式消息系统，它的最大的特性就是可以实时的处理大量数据以满足各种需求场景：比如基于hadoop的批处理系统、低延迟的实时系统、storm/Spark流式处理引擎，web/nginx日志、访问日志，消息服务等等，用scala语言编写，Linkedin于2010年贡献给了Apache基金会并成为顶级开源 项目。
 
-1.前言
+## 1.前言
 ----
 
 消息队列的性能好坏，其文件存储机制设计是衡量一个消息队列服务技术水平和最关键指标之一。下面将从Kafka文件存储机制和物理结构角度，分析Kafka是如何实现高效文件存储，及实际应用效果。
@@ -185,7 +174,7 @@ image
 *   异步通信：作为MQ，Producer与Consumer异步通信
     
 
-2.Kafka文件存储机制
+## 2.Kafka文件存储机制
 -------------
 
 2.1 Kafka部分名词解释如下：
