--- a/docs/02.后端技术/04.Kafka/10.kafka客户端自动识别新增分区.md
+++ b/docs/02.后端技术/04.Kafka/10.kafka客户端自动识别新增分区.md
@@ -25,6 +25,18 @@ Kafka 客户端消费服务是基于 go 语言编写的，使用的是 sarama-cl
 ## 二、go 常用的 Kafka 库
 
 ## 三、sarama 
+### 1，官方地址
+
+ [「sarama官方地址」](https://pkg.go.dev/github.com/IBM/sarama)，[「kafka协议地址」](https://cwiki.apache.org/confluence/display/KAFKA/A+Guide+To+The+Kafka+Protocol)
+
+### 2，简单介绍
+Package sarama 是一个纯 Go 客户端库，用于处理 0.8 及更高版本 Apache Kafka。它包括一个高级API，用于轻松地生产和消费消息，以及一个低级API，用于在高级API不足时控制线路上的字节。
+
+若要生成消息，可以使用 `AsyncProducer` 或 `SyncProducer`。`AsyncProducer` 接受管道上的消息 并尽可能高效地在后台异步生成它们,在大多数情况下，它是首选。`SyncProducer` 提供了一种方法，该方法将阻塞，直到 Kafka 确认生成的消息。但它通常效率较低，并且实际的可靠性依赖于“Producer.RequiredAcks”的配置值，在某些配置中，消息由 SyncProducer 有时仍可能丢失。
+
+要消费消息，可以使用 Consumer 或 Consumer-Group API。对于较低级别的需求，Broker 和 Request/Response 对象允许对每个连接进行精确控制，并通过线路发送的消息，客户端提供更高级别的元数据管理，该管理在生产者和消费者之间共享。
+
+### 3，客户端消费
 
 ## 四、sarama-cluster
 
